<?xml version="1.0"?>
<package>
  <name>turtlebot3_tiles</name>
  <version>0.1.0</version>
  <description>The turtlebot3_tiles package</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">salvador</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>image_transport_plugins</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>cv_bridge</build_depend>

  <export>
       <build_type>ament_cmake</build_type>
  </export>
</package>
